--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -268,6 +268,7 @@
     <ClCompile Include="LV3\연속 펄스 부분 수열의 합\Source.cpp" />
     <ClCompile Include="LV3\이중우선순위큐\Source.cpp" />
     <ClCompile Include="LV3\입국심사\Source.cpp" />
+    <ClCompile Include="LV3\자물쇠와 열쇠\Source.cpp" />
     <ClCompile Include="LV3\정수 삼각형\Source.cpp" />
     <ClCompile Include="LV3\최고의 집합\Source.cpp" />
     <ClCompile Include="LV3\합승 택시 요금\Source.cpp" />
