--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -453,5 +453,8 @@
     <ClCompile Include="LV3\경주로 건설\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\자물쇠와 열쇠\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
