--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -271,6 +271,7 @@
     <ClCompile Include="LV3\자물쇠와 열쇠\Source.cpp" />
     <ClCompile Include="LV3\정수 삼각형\Source.cpp" />
     <ClCompile Include="LV3\최고의 집합\Source.cpp" />
+    <ClCompile Include="LV3\풍선 터트리기\Source.cpp" />
     <ClCompile Include="LV3\합승 택시 요금\Source.cpp" />
     <ClCompile Include="LV3\합승 택시 요금\Source2.cpp" />
     <ClCompile Include="Programmers.cpp" />
