--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -456,5 +456,8 @@
     <ClCompile Include="LV3\자물쇠와 열쇠\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\풍선 터트리기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
