--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -459,5 +459,8 @@
     <ClCompile Include="LV3\풍선 터트리기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\스킬트리\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
