--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -462,5 +462,11 @@
     <ClCompile Include="LV2\스킬트리\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\프로세스\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\프로세스\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
