--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -468,5 +468,11 @@
     <ClCompile Include="LV2\프로세스\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\석유 시추\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\석유 시추\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
