--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -474,5 +474,8 @@
     <ClCompile Include="LV2\석유 시추\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\부대복귀\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
