--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -264,6 +264,7 @@
     <ClCompile Include="LV3\디스크 컨트롤러\Source.cpp" />
     <ClCompile Include="LV3\베스트 앨범\Source.cpp" />
     <ClCompile Include="LV3\보석 쇼핑\Source.cpp" />
+    <ClCompile Include="LV3\부대복귀\Source.cpp" />
     <ClCompile Include="LV3\불량 사용자\Source.cpp" />
     <ClCompile Include="LV3\섬 연결하기\Source.cpp" />
     <ClCompile Include="LV3\숫자 게임\Source.cpp" />
